# spacedisplay-rs

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  demo.sh  performance.ps1  performance.sh  snapcraft.yaml
.github/workflows/: ci.yaml  release.yaml
app/: Cargo.toml
app/src/: app.rs  file_list.rs  log_list.rs  logger.rs  main.rs  progressbar.rs  term.rs  ui.rs  utils.rs
app/src/dialog/: delete.rs  mod.rs  new_scan.rs  scan_stats.rs
app/src/no_ui/: app.rs  mod.rs
cli/: Cargo.toml
cli/src/: app.rs  file_list.rs  log_list.rs  main.rs  progressbar.rs  term.rs  ui.rs  utils.rs
cli/src/dialog/: delete.rs  mod.rs  new_scan.rs  scan_stats.rs
lib/: Cargo.toml
lib/src/: arena.rs  entry.rs  entry_snapshot.rs  lib.rs  logger.rs  path.rs  scanner.rs  tree.rs  tree_snapshot.rs  utils.rs
lib/src/platform/: linux.rs  macos.rs  mod.rs  unix.rs  windows.rs
lib/src/tree/: arena.rs  entry.rs  entry_snapshot.rs  mod.rs  path.rs  tree.rs  tree_snapshot.rs
lib/src/watcher/: linux.rs  macos.rs  mod.rs  windows.rs
