[package]
name = "spacedisplay-cli"
version = "0.2.0"
authors = ["Sviatoslav Kokurin <kokurinsv@gmail.com>"]
description = """
Fast and lightweight tool to scan your disk space.
"""
repository = "https://github.com/funbiscuit/spacedisplay-rs"
readme = "../README.md"
keywords = ["cli", "terminal", "disk", "scan"]
license = "MIT"
categories = ["command-line-interface", "command-line-utilities", "filesystem"]
edition = "2021"

[dependencies]
spacedisplay-lib = { path = "../lib", version = "0.2.0" }

anyhow = "1.0"
byte-unit = { version = "4.0", default-features = false, features = ["std"] }
clap = { version = "4.0.18", features = ["derive"] }
crossterm = { version = "0.25", features = ["serde"] }
derivative = "2.2.0"
num-format = "0.4.3"
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
unicode-width = "0.1.10"
