[package]
name = "spacedisplay-lib"
version = "0.1.1"
authors = ["Sviatoslav Kokurin <kokurinsv@gmail.com>"]
description = """
Library to scan your disk space.
"""
repository = "https://github.com/funbiscuit/spacedisplay-rs"
readme = "../README.md"
keywords = ["disk", "scan"]
license = "MIT"
categories = ["filesystem"]
edition = "2021"

[dependencies]
byte-unit = { version = "4.0", default-features = false, features = ["std"] }
crc = "3.0.0"
filesize = "0.2.0"
mountpoints = "0.2.1"
ptree = "0.4.0"

[target.'cfg(unix)'.dependencies]
proc-mounts = "0.3.0"
nix = "0.25.0"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42.0", features = [
    "Win32_Foundation", "Win32_Storage_FileSystem", "Win32_System_WindowsProgramming"
] }
widestring = "1.0.2"
