[package]
name = "diskscan"
version = "0.3.0"
authors = ["Sviatoslav Kokurin <kokurinsv@gmail.com>"]
description = """
Library to scan your disk space.
"""
repository = "https://github.com/funbiscuit/spacedisplay-rs"
readme = "../README.md"
keywords = ["disk", "scan"]
license = "MIT OR Apache-2.0"
categories = ["filesystem"]
edition = "2021"

[dependencies]
byte-unit = { version = "4.0", default-features = false, features = ["std"] }
crc = "3.0.0"
derivative = "2.2.0"
log = "0.4.17"
mountpoints = "0.2.1"
ptree = { version = "0.4.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
inotify = "0.10.0"
page_size = "0.5.0"
procfs = "0.15.1"

[target.'cfg(target_os = "macos")'.dependencies]
fsevent = "2.1.2"
libproc = "0.13.0"

[target.'cfg(unix)'.dependencies]
proc-mounts = "0.3.0"
nix = "0.26.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42.0", features = [
    "Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO",
    "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_WindowsProgramming"
] }
widestring = "1.0.2"
